2014-11-16  Adam Sjøgren  <asjo@koldfront.dk>

	* mml2015.el (mml2015-display-key-image): New variable.

2014-11-14  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-exit-no-update): Don't query about
	discarding changes in ephemeral groups.

	* ietf-drums.el (ietf-drums-parse-address): Don't issue warnings about
	things the user isn't interested in.

2014-11-13  Julien Danjou  <jd@abydos>

	* gnus-notifications.el (gnus-notifications-notify): Provide both
	app-icon and image-path.

2014-11-10  Kenjiro NAKAYAMA  <nakayamakenjiro@gmail.com>

	* gnus/mm-url.el (mm-url-encode-multipart-form-data):
	Restore to handle "multipart/form-data" by eww.

2014-11-07  Tassilo Horn  <tsdh@gnu.org>

	* gnus-start.el (gnus-activate-group): Fix typo reported by Tim
	Landscheidt.

2014-10-29  Paul Eggert  <eggert@cs.ucla.edu>

	Simplify use of current-time and friends.
	* gnus-delay.el (gnus-delay-article):
	* gnus-sum.el (gnus-summary-read-document):
	* gnus-util.el (gnus-seconds-today, gnus-seconds-month):
	* message.el (message-make-expires-date):
	Omit unnecessary call to current-time.
	* gnus-util.el (gnus-float-time): Simplify to an alias because
	time-to-seconds now behaves like float-time with respect to nil arg.
	(gnus-seconds-year): Don't call current-time twice to get the current
	time stamp, as this can lead to inconsistent results.

2014-10-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.el (gnus-mode-line-buffer-identification):
	Don't add image data for a non-graphic display (bug#18813).

2014-10-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.el (gnus-mode-line-buffer-identification): Don't shadow
	load-path, it blocks autoloading of find-image (bug#18813).

2014-10-24  enami tsugutomo  <tsugutomo.enami@jp.sony.com>

	* nnimap.el (nnimap-wait-for-response): Ignore NOOP response requested
	to keep connection open (bug#18728).

2014-10-20  Glenn Morris  <rgm@gnu.org>

	* Merge in all changes up to 24.4 release.
