@@ -1,3 +1,8 @@
+2014-11-17  Albert Krewinkel  <albert@zeitkraut.de>
+
+	* message.el (message-valid-fqdn-regexp): Add non-internaional new
+	TLDs.
+
 2014-11-16  Adam Sjøgren  <asjo@koldfront.dk>
 
 	* mml2015.el (mml2015-display-key-image): New variable.
